[tool.poetry]
name = "vk-to-telegram-transfer-bot"
version = "0.1.0"
description = ""
license = "GPL-3.0-only"
authors = ["whiletruedoend"]
packages = [
    { include = "*.py" }
]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.3"
vk_api = "^11.9.0"
datetime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
